feat: updated delete user API
